2000-03-05  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc: use NO_SIZE and NO_DATE.
	* ftpclass.cc: save size in entity_size and simulate eof on pos>=size;
	  send proper offset for REST.

2000-03-02  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: don't take over a connection if it has NOREST_MODE;
	  check if connection_limit is reached before interrupting a transfer.
	* commands.cc: -E for get, put, mget, mput.

2000-03-01  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc, CopyJob.h, FileAccess.cc, FileCopy.cc, FileCopy.h,
	  Job.cc, Job.h, NetAccess.cc, commands.cc, ftpclass.cc, resource.cc:
	  implement net:connection-limit and net:connection-takeover
	  settings; add Fg/Bg where needed.

2000-02-29  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc: explain termination when cwd is not accessible.
	* FileAccess.cc, FileAccess.h: (priority) new member; (SetPriority);
	  (FirstSameSite, NextSameSite) new methods.
	* FileCopy.cc: (OpenSession) mark current task as moved.
	* Http.h: (IsConnected) implemented.
	* NetAccess.cc, NetAccess.h: (CountConnections) new method;
	  (connection_limit, connection_takeover) new members.
	* SMTask.cc, SMTask.h: add a dummy init_task so that current!=0.

2000-02-28  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: remember last REST position and do `REST 0'
	  if last REST was >0 (for broken? ftp servers that don't reset REST).
	* MirrorJob.cc: (PrintStatus) improved.
	* pgetJob.cc: get size and offset after calling super::Do, because
	  the copier can be changed by it.

2000-02-27  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: fix typo in mput help.

2000-02-24  Alexander V. Lukyanov  <lav@yars.free.net>

	* Job.cc, Job.h, CmdExec.cc: (Job::ListOneJob, Job::PrintJobTitle) new
	  methods; use them.

2000-02-23  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: raise log level of CWD reply to 3.