@@ -58,6 +58,7 @@ void NetAccess::Init()
 
    connection_limit=0;	// no limit.
    connection_takeover=false;
+   takeover_time=NO_DATE;
 
    Reconfig(0);
 }
@@ -498,6 +499,7 @@ bool NetAccess::NextTry()
 void NetAccess::Close()
 {
    retries=0;
+   takeover_time=NO_DATE;
 
    Delete(resolver);
    resolver=0;
